# number-classifier-nn

./: CMakeLists.txt  README.md  main.cpp
include/: activation_functions.h  dataset_utils.h  forward_propagation.h  helpers.h  neural_network.h  parameter_handler.h
src/: activation_functions.cpp  dataset_utils.cpp  forward_propagation.cpp  helpers.cpp  main.cpp  neural_network.cpp  parameter_handler.cpp
